--- a/index.html
+++ b/index.html
@@ -113,7 +113,19 @@
       display: inline-flex;
       width: auto;
       height: auto;
-      /* border: 3px solid rgb(156, 155, 155); */
+      /* border: 1px solid rgb(156, 155, 155); */
+    }
+    #footnote {
+      display: inline-flex;
+      width: auto;
+      height: auto;
+      margin: 0 0 0 10px;
+      /* border: 1px solid rgb(156, 155, 155); */
+    }
+    .footnote_text {
+      position: relative;
+      display: inline-block;
+      font-size: 14px;
     }
     #controls {
       display: inline-flex;
@@ -122,7 +134,7 @@
       padding: 10px;
       width: auto;
       height: auto;
-      /* border: 3px solid rgb(156, 155, 155); */
+      /* border: 1px solid rgb(156, 155, 155); */
     }
     .control_block {
       width: 200px;
@@ -145,6 +157,7 @@
       border: 1px solid burlywood;
       background-color: blanchedalmond;
     }
+    #footnote_container,
     .element,
     .annotation,
     .add_element {
@@ -270,6 +283,7 @@
       margin: 3px;
     }
     .act_block {
+      position: relative;
       width: 98%;
     }
     .anno_block {
@@ -504,12 +518,15 @@
               element(s) of the same or different type.
               <br />
               <br />
-              Either an action is <b>intended</b> for participating in the interaction, or its effects are registered by other elements thus 'forcing' the acting element to participate (<b>unintended</b>). Please select the corresponding case. 
+              Either an action is <b>intended</b> for participating in the
+              interaction, or its effects are registered by other elements thus
+              'forcing' the acting element to participate (<b>unintended</b>).
+              Please select the corresponding case.
               <br />
               <br />
               An action can be initiated by the element itself or as a reaction
               to other action(s). Please specify the necessary conditions
-              following the action in the form of <b>"If ... do(es) ..."</b>.
+              following the action in the form of <b>"If ... do(es) ..."</b>. When there are more than three conditions, you can add a <b>footnote</b> to specify their order and relationships if needed.
               <br />
               <br />
               Please enter the actions and their conditions in a logical or
@@ -786,6 +803,15 @@
       <div class="add_element">
         <button id="add_element" onclick="addElement(this)">Add element</button>
       </div>
+    </div>
+    <div id="footnote">
+      <div
+        class="anno_block"
+        style="font-weight: bold; text-align: right; margin-right: 2px"
+      >
+        Footnotes:
+      </div>
+      <div id="footnote_container"></div>
     </div>
     <div id="controls">
       <div class="control_block">
