update the ISEA publication and hide generative buttons

--- a/index.html
+++ b/index.html
@@ -855,12 +855,12 @@
       <div class="control_block">
         <button class="control_button" id="visualise">Visualise</button>
       </div>
-      <div class="control_block">
+      <!-- <div class="control_block">
         <button class="control_button" id="randomise">Randomise</button>
       </div>
       <div class="control_block">
         <button class="control_button" id="permutate">Permutate</button>
-      </div>
+      </div> -->
     </div>
     <div id="vis">
       <svg id="container" width="1240" height="679"></svg>
