add url query parameters for ArtsIT2024

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <script type="module" src="input.js"></script>
     <script type="module" src="display.js"></script>
     <!-- <script type="module" src="permutate.js"></script> -->
-    <script type="module" src="randomise.js"></script>
+    <!-- <script type="module" src="randomise.js"></script> -->
     <script src="addcom.js" defer></script>
     <script src="addact.js" defer></script>
     <script src="addele.js" defer></script>
     <script src="addcond.js" defer></script>
     <script src="addeffect.js" defer></script>
     <script src="interface.js"></script>
-    <script type="module" src="admin.js"></script>
+    <!-- <script type="module" src="admin.js"></script> -->
     <script type="module" src="legends.js"></script>
     <script type="module" src="savepdf.js"></script>
     <script type="module" src="sketch.js" defer></script>
